<resources>
    <string name="app_name">Login</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="confrim_pass">Confrim Password</string>
    <string name="back">Back</string>
    <string name="signup">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="register">register</string>
    <string name="namaRegis">Nama</string>

    <string-array name="novel_array">
        <item>Novel 1</item>
        <item>Novel 2</item>
        <item>Novel 3</item>
        <item>Novel 4</item>
        <item>Novel 5</item>
        <item>Novel 6</item>
        <item>Novel 7</item>
        <item>Novel 8</item>
        <item>Novel 9</item>
        <item>Novel 10</item>
    </string-array>
</resources>