<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/bggradient">


    <TextView
        android:id="@+id/email"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="249dp" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:text="@string/nama"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="137dp"
        android:layout_height="37dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="395dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="248dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="314dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="384dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="69dp"
        android:text="@string/back"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="475dp"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="156dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="475dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="309dp"
        android:layout_height="187dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/americanpride"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>