<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context=".login.sign_in">
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/AmericanPride"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/americanpride"
                            android:contentDescription="Logo" />
                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/white"
                            android:layout_margin="20dp"
                            android:textSize="30dp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/white"
                            android:layout_margin="20dp"
                            android:textSize="30dp" />
                        <Button
                            android:id="@+id/button_signin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/SignIn"
                            android:textColor="@color/black"/>

                        <Button
                            android:id="@+id/button_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/register"
                            android:textColor="@color/black"/>
                </LinearLayout>
        </ScrollView>
</LinearLayout>